<resources>
    <string name="app_name">Attendance Appp</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="role">Role</string>
    <string name="display_image">Image descr</string>
    <string name="dislay_text">Text</string>
    <string name="fname">FirstName</string>
    <string name="lname">LastName</string>
    <string name="Std">Student</string>
    <string name="Lec">Lecturer</string>
    <string name="link_text">Or</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>

</resources>