<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Attendance"
    android:background="@drawable/welcome5">

    <CheckBox
        android:id="@+id/check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"/>




    <CheckBox
        android:id="@+id/check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:layout_below="@id/check1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>


    <CheckBox
        android:id="@+id/check3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:layout_below="@id/check2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>





    <CheckBox
        android:id="@+id/check4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:layout_below="@id/check3"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>




    <CheckBox
        android:id="@+id/check5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:layout_below="@id/check4"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>


    <CheckBox
        android:id="@+id/check6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:layout_below="@id/check5"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>





    <CheckBox
        android:id="@+id/check7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:layout_below="@id/check6"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>





    <CheckBox
        android:id="@+id/check8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:layout_below="@id/check7"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>



    <CheckBox
        android:id="@+id/check9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:layout_marginStart="100dp"
        android:textColor="@color/white"
        />


    <CheckBox
        android:id="@+id/check10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_below="@id/check9"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/ten" />

</RelativeLayout>