<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome5"
    tools:context=".MainActivity">

    <!--Image View for the logo-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/display_image"
        android:gravity="center"
        android:src="@drawable/ic_baseline_fact_check_24" />

    <!--Username field-->
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:background="@drawable/rounded_text_fields"
        android:inputType="text"/>

    <!--pasword field-->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_text_fields"
        android:password="true"
        android:hint="@string/password"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword" />

    <!--Button for Login-->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:background="@drawable/rounded_button">

    </Button>

    <TextView
        android:id="@+id/registration_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/link_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true">
    </TextView>

    <!--Button for Login-->
    <Button
        android:id="@+id/reg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_link"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:background="@drawable/rounded_button">

    </Button>


</RelativeLayout>